# shit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: releasing.md  training.md
docs/plans/: 2026-02-23-auto-download-model-design.md  2026-02-23-auto-download-model-plan.md  2026-02-24-pretty-cli-design.md  2026-02-24-pretty-cli-plan.md  2026-02-24-shitd-daemon-design.md  2026-02-24-shitd-daemon-plan.md
model/: shit.gguf.sha256  tokenizer.json.sha256
shells/: init.bash  init.fish  init.ps1  init.tcsh  init.zsh
src/: config.rs  main.rs  prompt.rs
src/daemon/: mod.rs  server.rs  service.rs
src/model/: engine.rs  inference.rs  mod.rs
src/shell/: bash.rs  fish.rs  mod.rs  powershell.rs  tcsh.rs  zsh.rs
tests/: daemon_protocol.rs
training/: augment.py  export.py  fetch_wordlists.py  generate_data.py  pyproject.toml  train.py
training/wordlists/: docker-images.txt  github-users.txt  k8s-resources.txt  packages-node.txt  packages-python.txt  packages-rust.txt  repo-names.txt  system-packages.txt
